--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -56,6 +56,13 @@
 	background: #f69e56;
 }
 
+.unselectable {
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 .report {
 	padding: 10px 0px;
 	visibility: hidden;
