--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -3,8 +3,9 @@
 **********************************************/
 
 .container {
-	width: 450px;
+	max-width: 450px;
 	margin: 0 auto;
+	position: relative;
 }
 
 .heading {
