--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -8,6 +8,12 @@
 	position: relative;
 }
 
+@media only screen and (max-width: 600px) {
+	.container {
+		max-width: 100%;
+	}
+}
+
 .heading {
 	padding: 12px 0px 12px 12px;
 	height: 130px;
