--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -73,6 +73,19 @@
 .report {
 	padding: 10px 0px;
 	visibility: hidden;
+	display: none;
+}
+
+.validWord {
+	font-size: 42px;
+	color: green;
+	text-align: center;
+}
+
+.notWord {
+	font-size: 42px;
+	color: red;
+	text-align: center;
 }
 
 .btn {
